fix: sonar issues (#33)